// Copyright 2019, Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option csharp_namespace = "Google.Cloud.Firestore";

import "google/firestore/v1/document.proto";

// This is like google.firestore.v1.Value, but with
// extra "hidden" fields. We can convert between Value and AugmentedValue
// via serialization without losing information, which lets us "hide"
// information related to sentinel values (delete, server
// timestamps, array operations) within a regular Value object.
// However, such values should never be transmitted over the wire.
// They are purely implementation details to allow information to
// flow through a Value-oriented interface.
message AugmentedValue {

  // This must be field 11 to match null_value in google.firestore.v1.Value
  SentinelKind kind = 11;
  
  // These fields are populated or not according to the kind.
  // They must not collide with the fields in google.firestore.v1.Value
  google.firestore.v1.ArrayValue array = 10000;
  google.firestore.v1.Value increment = 10001;
}

enum SentinelKind {
  SENTINEL_KIND_NONE = 0;
  SERVER_TIMESTAMP = 1;
  DELETE = 2;
  ARRAY_UNION = 3;
  ARRAY_REMOVE = 4;
  NUMERIC_INCREMENT = 5;
}
